gatekeeper/constraints/block-root-user.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockRootUser
metadata:
  name: block-root-user
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
      - apiGroups: ["argoproj.io"]
        kinds: ["Rollout"]
    excludedNamespaces:
      - kube-system
      - argocd
      - monitoring
      - gatekeeper-system
